--- a/api/src/main/resources/custom_templates/apiClient.mustache
+++ b/api/src/main/resources/custom_templates/apiClient.mustache
@@ -153,6 +153,11 @@ public ApiClient() {
 init();
 }
 
+public ApiClient(RestTemplate restTemplate) {
+this.restTemplate = restTemplate;
+init();
+}
+
 public ApiClient(RestTemplate restTemplate, CacheManager cacheManager) {
 this.restTemplate = restTemplate;
 this.cacheManager = cacheManager;
