attempt to fix build

--- a/api/src/main/resources/custom_templates/apiClient.mustache
+++ b/api/src/main/resources/custom_templates/apiClient.mustache
@@ -210,7 +210,7 @@ this.basePath = basePath;
 return this;
 }
 
-public setCacheManager(CacheManager cacheManager) {
+public void setCacheManager(CacheManager cacheManager) {
 this.cacheManager = cacheManager;
 }
 
