attempt to fix build

--- a/api/src/main/resources/custom_templates/apiClient.mustache
+++ b/api/src/main/resources/custom_templates/apiClient.mustache
@@ -211,7 +211,7 @@ return this;
 
 public void setCacheManager(CacheManager cacheManager) {
 this.cacheManager = cacheManager;
-this.cache = cacheManager.getCache("default");
+this.cache = this.cacheManager.getCache("default");
 }
 
 /**
