--- a/api/src/main/resources/custom_templates/api.mustache
+++ b/api/src/main/resources/custom_templates/api.mustache
@@ -371,20 +371,21 @@ import org.openapitools.jackson.nullable.JsonNullableModule;
         {{#returnType}}ParameterizedTypeReference<{{{returnType}}}> localReturnType = new ParameterizedTypeReference<{{{returnType}}}>() {};{{/returnType}}{{^returnType}}ParameterizedTypeReference<Void> localReturnType = new ParameterizedTypeReference<Void>() {};{{/returnType}}
             ResponseEntity<{{#returnType}}{{{returnType}}}{{/returnType}}{{^returnType}}Void{{/returnType}}> responseEntity = apiClient.invokeAPI("{{{path}}}", HttpMethod.{{httpMethod}}, {{#hasPathParams}}uriVariables{{/hasPathParams}}{{^hasPathParams}}Collections.<String, Object>emptyMap(){{/hasPathParams}}, localVarQueryParams, localVarPostBody, localVarHeaderParams, localVarCookieParams, localVarFormParams, localVarAccept, localVarContentType, localVarAuthNames, localReturnType);
             {{#returnType}}
-                    PagedList pagedList = new PagedList();
-                    pagedList.addItems(Arrays.asList(responseEntity.getBody()));
-                    List<String> linkHeaders = responseEntity.getHeaders().get("link");
-                    for (String link : linkHeaders) {
-                    String[] parts = link.split("; *");
-                    String url = parts[0]
-                    .replaceAll("<", "")
-                    .replaceAll(">", "");
-                    String rel = parts[1];
-                    if (rel.equals("rel=\"next\"")) {
-                    pagedList.setNextPage(url);
-                    } else if (rel.equals("rel=\"self\"")) {
-                    pagedList.setSelf(url);
-                    }
+                    PagedList pagedList = PagedList.constructPagedList(responseEntity);
+
+                    String afterMarker = pagedList.getAfter(pagedList.getNextPage());
+
+                    if (afterMarker != null) {
+                    do {
+                    localVarQueryParams.putAll(apiClient.parameterToMultiValueMap(null, "after", afterMarker));
+
+                    ResponseEntity<{{#returnType}}{{{returnType}}}{{/returnType}}{{^returnType}}Void{{/returnType}}> newResponseEntity = apiClient.invokeAPI("{{{path}}}", HttpMethod.{{httpMethod}}, {{#hasPathParams}}uriVariables{{/hasPathParams}}{{^hasPathParams}}Collections.<String, Object>emptyMap(){{/hasPathParams}}, localVarQueryParams, localVarPostBody, localVarHeaderParams, localVarCookieParams, localVarFormParams, localVarAccept, localVarContentType, localVarAuthNames, localReturnType);
+
+                    PagedList newPagedList = PagedList.constructPagedList(newResponseEntity);
+                    pagedList.getItems().addAll(newPagedList.getItems());
+                    pagedList.setNextPage(newPagedList.getNextPage());
+                    afterMarker = newPagedList.getAfter(newPagedList.getNextPage());
+                    } while (afterMarker != null);
                     }
                     return pagedList;
             {{/returnType}}
